fix: scrollbar color

--- a/src/_includes/css/custom.css
+++ b/src/_includes/css/custom.css
@@ -20,7 +20,7 @@ html {
 
     body::-webkit-scrollbar-thumb
     {
-        background-color: #C3DAFE;
+        background-color: #e5e7eb;
     }
 }
 
